fixed errors and navbar

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,5 +2,5 @@
     && user.role == 'student'"><app-studenthome></app-studenthome></div>
 <div *ngIf="isLoggedIn && user.email == loggedInUser && user.role == 'teacher'" ><app-teacherhome></app-teacherhome></div>
 </div>
-<div *ngIf="isLoggedIn && loggedInUser == 'sahilkaushal2013@gmail.com'"><app-adminhome>
+<div *ngIf="isLoggedIn && loggedInUser == 'stmuserlogin1234@gmail.com'"><app-adminhome>
 </app-adminhome></div>
