--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
         </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarsExampleDefault" 
-      *ngIf="isLoggedIn  && loggedInUser == 'sahilkaushal2013@gmail.com'">
+      *ngIf="isLoggedIn  && loggedInUser == 'stmuserlogin1234@gmail.com'">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/adminhome">Home</a>
@@ -50,7 +50,7 @@
         </li> 
       </ul> 
     </div>
-    <ul class="navbar-nav ml-auto" *ngIf="loggedInUser !='sahilkaushal2013@gmail.com'">
+    <ul class="navbar-nav ml-auto" *ngIf="loggedInUser !='stmuserlogin1234@gmail.com'">
         
       <li *ngIf="isLoggedIn" class="nav-item">
            <a class="nav-link" href="#">
