--- a/src/app/components/adminhome/adminhome.component.html
+++ b/src/app/components/adminhome/adminhome.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="card bg-primary shadow">
           <div class="card-body text-center">
-              <p class="card-text"><i class="fa fa-paste my-2"></i><br>
+              <p class="card-text"><i class="fa fa-address-book my-2"></i><br>
               <button type="button" class="btn btn-md btn-green my-2" routerLink="/addteacher">Add Teacher</button></p>
           </div>
         </div>
