--- a/src/app/components/addtests/addtests.component.html
+++ b/src/app/components/addtests/addtests.component.html
@@ -97,13 +97,13 @@
                       [(ngModel)]="test.co"
                       name="CO"
                       #CO="ngModel"
-                      minlength="1"
+                      minlength="2 "
                       required
                     >
                   </div>
   
         
-        <input type="submit" class="btn btn-primary btn-block" value="Submit">
+        <input type="submit" class="btn btn-primary btn-block mx-auto" style="width:170px;" value="Submit">
       </form>
     </div>
   </div>
