--- a/src/app/components/editstudent/editstudent.component.html
+++ b/src/app/components/editstudent/editstudent.component.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         
-        <input type="submit" class="btn btn-primary btn-block" value="Submit">
+        <input type="submit" class="btn btn-primary btn-block mx-auto" style="width:200px;" value="Submit">
       </form>
     </div>
   </div>
