--- a/src/app/components/getmarks/getmarks.component.html
+++ b/src/app/components/getmarks/getmarks.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 <table *ngIf="marks?.length > 0;else noStudents " class="table table-striped">
-  <thead class="thead-inverse">
+  <thead class="thead-dark">
     <tr>
       <th>Student Email</th>
       <th>Marks Out Of 50</th>
