--- a/src/app/components/navbar/adminnav/adminnav.component.html
+++ b/src/app/components/navbar/adminnav/adminnav.component.html
@@ -1,7 +1,7 @@
 
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="/adminhome">Home</a>
+        <a class="nav-link" href="#" routerLink="/adminhome"><i class="fa fa-home"></i></a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#" routerLink="/addteacher">Add Teacher</a>
