--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,1 @@
-<a href="#" routerLink="/addstudent" class="btn btn-success btn-block"><i class="fa fa-plus">&nbsp;Add New Student</i></a>
+<a href="#" routerLink="/addstudent" class="btn btn-success btn-block" style="width:200px;"><i class="fa fa-plus">&nbsp;Add New Student</i></a>
