--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="table-responsive">
   <table *ngIf="students?.length> 0;else noStudents " class="table table-striped">
-    <thead class="thead-inverse">
+    <thead class="thead-dark">
       <tr>
         <th>Name</th>
         <th>Email</th>
