--- a/src/app/components/tests/tests.component.html
+++ b/src/app/components/tests/tests.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="table-responsive">
 <table *ngFor="let test of tests" class="table table-striped">
-  <thead class="thead-inverse">
+  <thead class="thead-dark">
     <tr>
       <th>Subject</th>
       <th>Question</th>
