--- a/src/app/components/addteacher/addteacher.component.html
+++ b/src/app/components/addteacher/addteacher.component.html
@@ -57,20 +57,20 @@
             class="form-control"
             [(ngModel)]="teacher.email"
             name="email"
+            email="true"
             #studentEmail="ngModel"
-            minlength="5"
             required
           >
           <div *ngIf="studentEmail.errors?.required && studentEmail.touched" class="alert alert-danger">
             Email required
           </div>
-          <div *ngIf="studentEmail.errors?.minlength && studentEmail.touched" class="alert alert-danger">
-              Email should be atleast 5 characters
+          <div *ngIf="studentEmail.errors?.email && studentEmail.touched" class="alert alert-danger">
+              Email should be in valid format
             </div>
         </div>
   
         <div class="form-group">
-          <label for="phone">Phone</label>
+          <label for="number">Phone</label>
           <input 
             type="text"
             class="form-control"
@@ -78,6 +78,7 @@
             name="phone"
             #studentPhone="ngModel"
             minlength="10"
+            maxlength="10"
             required
           >
           <div *ngIf="studentPhone.errors?.minlength && studentPhone.touched" class="alert alert-danger">
@@ -89,18 +90,12 @@
         </div>
         <div class="form-group">
           <label for="phone">Role</label>
-          <select
-          type="text"
-            class="form-control"
-            [(ngModel)]="teacher.role"
-            name="role"
-            #role="ngModel"
-            required>
-            <option value="teacher">Teacher</option>
+          <select class="form-control" name="role" #role="ngModel"  [(ngModel)]="teacher.role">
+            <option selected value="teacher">Teacher</option>
           </select>
         </div>
         
-        <input type="submit" class="btn btn-primary btn-block" value="Submit">
+        <input type="submit" class="btn btn-primary btn-block mx-auto" style="width:200px;" value="Submit">
       </form>
     </div>
   </div>
