--- a/src/app/components/navbar/adminnav/adminnav.component.css
+++ b/src/app/components/navbar/adminnav/adminnav.component.css
@@ -1,6 +1,6 @@
 .navigation{
     box-shadow: 0px 0px 20px 2px;
-    background-color: #222223; 
+    background-color:#0275d8; 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 900;
 }
@@ -11,9 +11,14 @@ color:white;
 }
 a:hover
 {
-    color:rgb(155, 150, 141);
+    color:black;
+    font-weight: 900;
+    transform: scale(1.2);
 }
 button{
     color:white;
     
+}
+i{
+    font-size:20px;
 }
